# ppsQJ_m2

./: .gitignore  CONTEXT.md  README.md  backward_pass.py  doob_wtmc.py  exact_backend.py  gaussian_backend.py  overlaps.py  pyproject.toml  run_extended_validation.py  run_part6_validation.py
analysis/: _analysis_common.py  aggregate_ladder.py  anchor_scan.py  bench_blas_threads.py  bench_dtau.py  bench_quick.py  bl_saturation.py  chi2_aggregate.py  chi2_response.py  chi2_worker.py  compute_theta1.py  compute_theta1_exact.py  d5_clones_vs_seeds.py  debias_collapse.py  delta_B_zeta0.py  diagnostic_suite.py  exponent_noclick.py  extract_yzeta.py  extrapolate_nc.py  fit_areaphase.py  fit_opdim.py  fss_collapse_data.txt  inventory_data.py  monitor_and_plot.py  nc_bias_pairs.py  nc_scaling_diagnostic.py  parity_resolved_data.pkl  parity_resolved_theta.py  plot_saturation.py  pps_phase_diagram.py  profile_cloning.py  run_exponent_noclick.sh  scaling_form.py  t_saturation.py  test_fss_collapse.py  test_yzeta1_collapse.py  theta1_data.pkl
docs/: architecture_theory_map.md
notebooks/: doob_full_validation.ipynb  doob_wtmc_validation.ipynb  proposition_43_verification.ipynb  quickstart_debug.ipynb
pps_qj/: __init__.py  backward_pass.py  backward_pass_io.py  cloning.py  cloning_caseA.py  cloning_jax.py  doob_wtmc.py  exact_backend.py  exact_backend_caseA.py  extended_validation.py  gaussian_backend.py  gaussian_backend_caseA.py  gaussian_backend_jit.py  overlaps.py  part6_validation.py  simulator.py  types.py
scripts/: aggregate_runs.py  analyze_dense_zeta.py  (+4 more)
(+169 files in other folders)
