[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pps-qj"
version = "0.1.0"
description = "Partial post-selection quantum jump simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[tool.setuptools]
packages = ["pps_qj"]

[tool.setuptools.package-dir]
pps_qj = "pps_qj"
